tests/negative/typecheck/dyn-type2.orng
fn main() -> Int {
    let x: &dyn [2]Int = (4, 5)
    5
}